--- a/1_introduction/2. Autogen vs Frameworks.ipynb
+++ b/1_introduction/2. Autogen vs Frameworks.ipynb
@@ -46,13 +46,13 @@
    "id": "54d4e6fd",
    "metadata": {},
    "source": [
-    "Architecture - Langchain has a chain0based sequetial execution model whereas autogen has event driven async architecture.\n",
+    "Architecture - Langchain has a chain based sequential execution model whereas autogen has event driven async architecture.\n",
     "\n",
-    "Multi Agent Capabilities - Autogen excels in autonomous multi-agent collboration. Langhain focuses on a single-agent workflow with structured steps.\n",
+    "Multi Agent Capabilities - Autogen excels in autonomous multi-agent collboration. Langchain focuses on a single-agent workflow with structured steps.\n",
     "\n",
     "Observability - Autogen has better event tracking and Langchain has a basic tracing.\n",
     "\n",
-    "Scalable - Autogen can easily scaling on complex agent networks, lanchain synchronous design it struggle with large scale systems.\n",
+    "Scalable - Autogen can easily scaling on complex agent networks, langhain synchronous design it struggle with large scale systems.\n",
     "\n",
     "Use Case - Autogen good for Collborative AI ( research team) and langchain QnA or data processing.\n"
    ]
@@ -70,7 +70,7 @@
    "id": "c276c5bb",
    "metadata": {},
    "source": [
-    "- Flexibility - Autogen hs low level API and high level agentChat API, crewAI template based model.\n",
+    "- Flexibility - Autogen has low level API and high level agentChat API, crewAI template based model.\n",
     "- Customization - Autogen provides with deep customization while CrewAI is good for quick setups with limited capability.\n",
     "- Popularity - Autigen has a longer history and larger community , CrewAI has a good user base.\n",
     "- Learning Curve - Autogen has a steep learnin curve whereas crewAI is simpler for multi agent. \n",
@@ -98,8 +98,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "autogen-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
