--- a/3_agents_team/2_termination_condition.ipynb
+++ b/3_agents_team/2_termination_condition.ipynb
@@ -1,19 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "a0bc664b",
-   "metadata": {},
-   "source": [
-    "## Agent in Team \n",
-    "- A single Agent can only say create a short story for us.\n",
-    "- but with a team whre many agents work together towards a common goal they can help us in writing or even helping to review, edit etc."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9dcbffc1",
+   "id": "d5e07df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "67dd8d3c",
+   "execution_count": 2,
+   "id": "f058106f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d93aac82",
+   "execution_count": 8,
+   "id": "6f7b460c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from autogen_agentchat.agents import AssistantAgent\n",
+    "from autogen_agentchat.conditions import TextMentionTermination\n",
     "\n",
     "dsa_solver = AssistantAgent(\n",
     "    name = 'Complex_DSA_Solver',\n",
@@ -59,82 +50,80 @@
     "    name = 'CODE_REVEIWER',\n",
     "    model_client=model_client,\n",
     "    description='A Code Reviewer',\n",
-    "    system_message=\"You review the code given by the complex_dsa_solver and make sure it is optimized.Give under 10 words\"\n",
+    "    system_message=\"You review the code given by the complex_dsa_solver and make sure it is optimized.Give under 10 word.\"\n",
     ")\n",
     "\n",
     "code_editor = AssistantAgent(\n",
     "    name = 'CODE_EDITOR',\n",
     "    model_client=model_client,\n",
     "    description='A Code editor',\n",
-    "    system_message=\"You make the code easy to understand and add comments wherever required.Give under 10 words\"\n",
-    ")\n"
+    "    system_message=\"You make the code easy to understand and add comments wherever required.Give under 10 words.\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "42625f25",
+   "execution_count": 9,
+   "id": "2b319352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from autogen_agentchat.teams import RoundRobinGroupChat\n",
+    "from autogen_agentchat.messages import TextMessage\n",
+    "from autogen_agentchat.conditions import TextMentionTermination, MaxMessageTermination\n",
+    "\n",
+    "termination_condition = TextMentionTermination(\"TERMINATE\") | MaxMessageTermination(1)\n",
+    "\n",
+    "team = RoundRobinGroupChat(\n",
+    "    participants=[dsa_solver,code_reviewer,code_editor],\n",
+    "    termination_condition=termination_condition\n",
+    ")\n",
+    "\n",
+    "# async def test_team():\n",
+    "#     task = TextMessage(content='Write a simple Hello world code ?',source='User')\n",
+    "#     result = await team.run(task=task)\n",
+    "#     for each_agent_message in result.messages:\n",
+    "#         print(f'{each_agent_message.source} : {each_agent_message.content}' )\n",
+    "#         print('\\n \\n')\n",
+    "\n",
+    "# await test_team()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c8748646",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User : Write a simple Hello world code ?\n",
-      "\n",
-      " \n",
-      "\n",
-      "Complex_DSA_Solver : ```python\n",
-      "print(\"Hello, world!\")\n",
-      "```\n",
-      "\n",
-      "\n",
-      " \n",
-      "\n",
-      "CODE_REVEIWER : That's correct.  It's a simple and functional \"Hello, world!\" program in Python.\n",
-      "\n",
-      "\n",
-      " \n",
-      "\n",
-      "CODE_EDITOR : Okay.  Is there anything else I can help you with?\n",
-      "\n",
-      "\n",
-      " \n",
-      "\n",
-      "Complex_DSA_Solver : Yes, I'm ready for your next request.  What would you like me to do?\n",
-      "\n",
-      "\n",
-      " \n",
-      "\n"
+      "---------- TextMessage (user) ----------\n",
+      "Write a short poem about the fall season.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TaskResult(messages=[TextMessage(source='user', models_usage=None, metadata={}, content='Write a short poem about the fall season.', type='TextMessage')], stop_reason='Maximum number of messages 1 reached, current message count: 1')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from autogen_agentchat.teams import RoundRobinGroupChat\n",
-    "from autogen_agentchat.messages import TextMessage\n",
-    "\n",
-    "team = RoundRobinGroupChat(\n",
-    "    participants=[dsa_solver,code_reviewer,code_editor],\n",
-    "    max_turns=4 # -----># maximum number of Message before it stops between the agents.\n",
-    ")\n",
-    "\n",
-    "async def test_team():\n",
-    "    task = TextMessage(content='Write a simple Hello world code ?',source='User')\n",
-    "    \n",
-    "    result = await team.run(task=task)\n",
-    "\n",
-    "    for each_agent_message in result.messages:\n",
-    "        print(f'{each_agent_message.source} : {each_agent_message.content}' )\n",
-    "        print('\\n \\n')\n",
-    "\n",
-    "\n",
-    "await test_team()"
+    "from autogen_agentchat.ui import Console\n",
+    "await team.reset()  # Reset the team for a new task.\n",
+    "await Console(team.run_stream(task=\"Write a short poem about the fall season.\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9572b93b",
+   "id": "c6052c51",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -142,7 +131,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0a7afd5",
+   "id": "9bf73af6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57975ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e666304c",
    "metadata": {},
    "outputs": [],
    "source": []
